[gd_scene load_steps=4 format=2]

[ext_resource path="res://Interface/VisionMode.gd" type="Script" id=1]
[ext_resource path="res://SFX/nightvision.wav" type="AudioStream" id=2]
[ext_resource path="res://SFX/nightvision_off.wav" type="AudioStream" id=3]

[node name="VisionMode" type="CanvasModulate" groups=[
"Interface",
]]
color = Color( 0.109804, 0.117647, 0.109804, 1 )
script = ExtResource( 1 )

[node name="NightVisionOff" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -8.0

[node name="NightVisionOn" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -8.0

[node name="VisionModeTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
[connection signal="timeout" from="VisionModeTimer" to="." method="_on_VisionModeTimer_timeout"]
